# LowSightFace

./: .gitignore  BntechEyeFriend.pro  CMakeLists.txt  LICENSE-COMMERCIAL  README.md  README_cn.md  bntech_eye_friend.pro  build.bat
client/: camerawidget.cpp  camerawidget.h  facealigner.cpp  facealigner.h  facedatabase.cpp  facedatabase.h  facedetector.cpp  facedetector.h  facemanagerdialog.cpp  facemanagerdialog.h  facerecognizer.cpp  facerecognizer.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  pulsedots.cpp  pulsedots.h  resources.qrc  volumeslider.cpp  volumeslider.h  whisperclient.cpp  whisperclient.h
db/: table.txt
docs/: BntechEyeFriend.js  html5_vs_wasm.txt  index.html  optimization-guide.md  qtloader.js
docs/models/: retinaface.onnx
esp32_src/CameraWebServer/: CameraWebServer.ino  app_httpd.cpp  camera_pins.h  dhcp code.txt
esp32_src/CameraWebServer/esp32_cert/: cert.h  gen_esp32_ssl.sh
esp32_src/CameraWebServer/esp32_cert/esp32_ssl_cert/: ca.crt  ca.key  ca.srl  device.crt  device.csr  device.key  esp32_server.pem  san.ext
html5_client/: example_Dexie.js  example_layer.html  example_tabulator.html  extract.html  face_feature.json  http_server.py  index.html  lib.html  recognizemn.html  seekcam_fullrange_ttsmn.html  seekesp_fullrange_ttsmn.html  server.crt  server.key  tts.html  zoom.html
html5_client/assets/onnxruntime/: SOURCE.txt  VERSION_NUMBER
html5_client/assets/opencv/: loader.js
